--- a/index2.0.html
+++ b/index2.0.html
@@ -154,7 +154,7 @@
         });
 
         yesBtn.addEventListener('click', () => {
-            window.location.href = 'heart.html';
+            window.location.href = 'heart2.0.html';
         });
     </script>
 </body>
